<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gucheng.inventoryapp.EditorActivity"
    tools:showIn="@layout/activity_editor" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView    android:id="@+id/pic_text"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true" />

        <LinearLayout   android:id="@+id/name_layout"
            android:layout_below="@id/pic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"/>

            <EditText   android:id="@+id/name_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/name"/>
        </LinearLayout>

        <LinearLayout   android:id="@+id/stock_layout"
            android:layout_below="@id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/stock"/>

            <EditText   android:id="@+id/stock_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLength="4"
                android:inputType="number"
                android:hint="@string/stock"/>
        </LinearLayout>

        <LinearLayout   android:id="@+id/sale_layout"
            android:layout_below="@id/stock_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sale_counts"/>

            <EditText   android:id="@+id/sale_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLength="4"
                android:inputType="number"
                android:hint="@string/sale_counts"/>
        </LinearLayout>

        <LinearLayout   android:id="@+id/price"
            android:layout_below="@id/sale_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/price"/>

            <EditText   android:id="@+id/price_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLength="7"
                android:inputType="number"
                android:hint="@string/price"/>
        </LinearLayout>


        <Button android:id="@+id/delete_button"
            android:layout_below="@id/price"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:text="@string/delete_btn" />

        <Button android:id="@+id/save_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/delete_button"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:text="@string/save_btn"/>

    </RelativeLayout>
</ScrollView>